# OAgent

./: .gitignore  DEVELOPMENT.md  README.md
docs/: ARCHITECTURE.md  DEVELOPMENT_RULES.md  PRD.md  PROMPT_TEMPLATE.md  TECHNICAL_SPECIFICATION.md
oagent-backend/: .env.example  README.md  pyproject.toml
oagent-backend/src/oagent/: __init__.py  main.py
oagent-backend/src/oagent/api/: __init__.py
oagent-backend/src/oagent/api/v1/: __init__.py  agent.py  chat.py  config.py  llm.py  router.py
oagent-backend/src/oagent/config/: __init__.py  logging.py  settings.py
oagent-backend/src/oagent/core/: __init__.py  exceptions.py  plugin_base.py  registry.py
oagent-backend/src/oagent/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
oagent-backend/src/oagent/graph/workflows/: __init__.py  basic_react.py  human_in_loop.py  rag_workflow.py
oagent-backend/src/oagent/models/: __init__.py  agent.py  chat.py  graph.py  llm.py
oagent-backend/src/oagent/plugins/: __init__.py
oagent-backend/src/oagent/plugins/agent/: __init__.py  base.py  langchain.py  langgraph.py
oagent-backend/src/oagent/plugins/embedding/: __init__.py  base.py  dashscope.py
oagent-backend/src/oagent/plugins/llm/: __init__.py  base.py  dashscope.py  ollama.py  openai.py
oagent-backend/src/oagent/plugins/vectorstore/: __init__.py  base.py  chroma.py  faiss.py  milvus.py
oagent-backend/src/oagent/services/: __init__.py  memory_service.py
oagent-backend/src/oagent/tools/: __init__.py  registry.py
oagent-backend/tests/: conftest.py
oagent-backend/tests/test_agent/: __init__.py  test_langchain.py
oagent-backend/tests/test_api/: __init__.py  test_endpoints.py
oagent-backend/tests/test_core/: __init__.py  test_registry.py
oagent-backend/tests/test_embedding/: __init__.py  test_dashscope.py
oagent-backend/tests/test_graph/: __init__.py  test_builder.py  test_edges.py  test_nodes.py  test_state.py
oagent-backend/tests/test_llm/: __init__.py  test_dashscope.py  test_openai.py
oagent-backend/tests/test_plugins/test_agent/: test_langgraph.py
oagent-backend/tests/test_vectorstore/: __init__.py  test_chroma.py  test_faiss.py  test_milvus.py
oagent-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
oagent-desktop/src/: App.tsx  index.css
oagent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
oagent-desktop/src-tauri/src/: lib.rs  main.rs
oagent-desktop/src/components/chat/: MarkdownMessage.tsx  SessionSidebar.tsx  ToolIndicator.tsx  index.ts
oagent-desktop/src/components/layout/: Layout.tsx  Sidebar.tsx
oagent-desktop/src/components/ui/: button.tsx  use-toast.ts
oagent-desktop/src/lib/: api.ts  index.ts  types.ts
oagent-desktop/src/pages/: Chat.tsx  Config.tsx  Dashboard.tsx  Knowledge.tsx
oagent-desktop/src/stores/: chatStore.ts  configStore.ts  index.ts  sessionStore.ts
