[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oagent"
version = "0.1.0"
description = "Open-source pluggable universal Agent framework based on LangChain v1.0"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OAgent Team", email = "team@oagent.dev" }
]
keywords = [
    "agent",
    "langchain",
    "langgraph",
    "llm",
    "rag",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # LangChain Core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",

    # LangGraph
    "langgraph>=0.2.0",

    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # Local LLM
    "langchain-ollama>=0.2.0",

    # Embeddings
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=2.2.0",

    # Vector Stores
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",  # For FAISS, etc.

    # Document Loaders
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Database
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",

    # Security
    "cryptography>=41.0.0",

    # Utils
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# Additional vector stores
milvus = [
    "langchain-milvus>=0.1.0",
    "pymilvus>=2.3.0",
]

qdrant = [
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
]

pinecone = [
    "langchain-pinecone>=0.1.0",
    "pinecone-client>=3.0.0",
]

# Additional Chinese LLM providers
chinese = [
    "dashscope>=1.17.0",  # 阿里云通义千问
    "langchain-zhipuai>=0.1.0",  # 智谱AI
]

[project.scripts]
oagent = "oagent.main:main"

[project.urls]
Homepage = "https://github.com/your-org/oagent"
Documentation = "https://oagent.readthedocs.io"
Repository = "https://github.com/your-org/oagent"
Issues = "https://github.com/your-org/oagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["oagent"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore-missing-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/oagent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/oagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]